# nix

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  application.cpp  application.hpp  argparser.hpp  balancer.cpp  balancer.hpp  buffer.hpp  cfgparser.hpp  chunk.cpp  chunk.hpp  chunk3d.cpp  chunk3d.hpp  chunkmap.cpp  chunkmap.hpp  chunkvec.hpp  chunkvector.hpp  common.cmake  common.hpp  common.mk  compiler-gcc.mk  config.hpp  debug.hpp  diag.hpp  esirkepov.hpp  halo3d.hpp  hilbert.hpp  interp.hpp  jsonio.cpp  jsonio.hpp  limiter.hpp  logger.hpp  mpistream.hpp  nix.hpp  nixio.cpp  nixio.hpp  particle.hpp  particle_primitives.hpp  (+11 more)
base/: cfgparser.hpp  cmdparser.hpp  mpistream.hpp  tinyformat.hpp
diag/: chunk_writer.hpp  handler.hpp  io_handler.hpp  load.hpp  metadata.hpp  parallel.hpp  resource.hpp
iocore/: iocore.cpp  iocore.hpp  jsonio.cpp  jsonio.hpp
maxwell/: .gitignore  Makefile  default.json  fdtd.cpp  fdtd.hpp  json2hdf5.py  main.cpp  maxwell.cpp  maxwell.hpp  test_maxwell.py  xdirection.json  ydirection.json  zdirection.json
obsolete/: hilbert.cpp  hilbert.hpp
obsolete/mdarray/: mdarray.hpp
obsolete/mdarray/blitz/gnu/: bzconfig.h
pk3/: Makefile  application.hpp  balancer.hpp  buffer.hpp  chunk.cpp  chunk.hpp  chunk3d.cpp  chunk3d.hpp  chunkmap.cpp  chunkmap.hpp  common.hpp  debug.hpp  jsonio.cpp  jsonio.hpp  sfc.hpp  xtensorall.hpp
pk3/unittest/: Makefile  application.cpp  chunkmap.cpp  test_application.cpp  test_chunk.cpp  test_chunkmap.cpp  test_jsonio1.cpp  test_jsonio2.cpp  test_parallel.cpp  test_serial.cpp  test_sfc.cpp
unittest/: CMakeLists.txt  Makefile  Makefile.inc  application.cpp  chunk.cpp  default.cfg  default.json  patch.cpp  patchmap.cpp  test_application.cpp  test_argparser.cpp  test_balancer.cpp  test_balancer_parallel.cpp  test_buffer.cpp  test_cfgparser.cpp  test_chunk.cpp  test_chunkmap.cpp  test_chunkvec.cpp  test_chunkvector.cpp  test_diag_resource.cpp  test_esirkepov.cpp  test_interp.cpp  test_jsonio1.cpp  test_jsonio2.cpp  test_logger.cpp  test_mpistream.cpp  test_mpistream_parallel.cpp  test_nixio.cpp  test_nixio_parallel.cpp  test_parallel.cpp  test_parallel.hpp  test_particle.cpp  test_particle_primitives.cpp  test_primitives.cpp  test_random.cpp  test_sendrecv.cpp  test_serial.cpp  test_sfc.cpp  test_statehandler_parallel.cpp  test_xtensor_halo3d.cpp  (+2 more)
utils/: common.hpp  config.hpp
